--- a/logsubmit-form-late.html
+++ b/logsubmit-form-late.html
@@ -30,7 +30,7 @@
     <div id="step-1">
       <p>
 	<strong>
-	  Please note that the log submission deadline for CQP 2014, 31 October 2014 23:59 UTC, 
+	  Please note that the log submission deadline for CQP 2015, 12 October 2015 23:59 UTC, 
 	  has past.
 	</strong>
 	Unless you made prior arrangements with the CQP Chairman, your log is late and by
@@ -38,7 +38,8 @@
 	it makes log cross-checking more accurate.
       </p>
       <p>Uploading a CQP Cabrillo file is as easy as 1, 2, 3.  Please complete all three steps to complete
-	your contest entry.</p>
+	your contest entry. If the 3 step process does not work, try this 
+	<a href="logsubmit-nojs.html">one step form</a>.</p>
       <h1>Step 1: Upload Cabrillo file</h1>
       <span class="btn btn-success fileinput-button">
         <i class="glyphicon glyphicon-plus"></i>
@@ -98,6 +99,7 @@ resubmit. Examples of the preferred QSO line syntax are available
 	<label for="opclassId" class="inLabel">Entry class:</label>
 	<select name="opclass" id="opclassId" class="jForm">
 	  <option value="single">Single-op</option>
+	  <option value="single-assisted">Single-op-assisted</option>
 	  <option value="multi-single">Multi-single</option>
 	  <option value="multi-multi" selected="selected">Multi-multi</option>
 	  <option value="checklog" >Checklog</option>
@@ -163,7 +165,7 @@ resubmit. Examples of the preferred QSO line syntax are available
     <div id="step-1a">
       <p>
 	<strong>
-	  Please note that the log submission deadline for CQP 2014, 31 October 2014 23:59 UTC, 
+	  Please note that the log submission deadline for CQP 2015, 12 October 2015 23:59 UTC, 
 	  has past.
 	</strong>
 	Unless you made prior arrangements with the CQP Chairman, your log is late and by
@@ -171,7 +173,8 @@ resubmit. Examples of the preferred QSO line syntax are available
 	it makes log cross-checking more accurate.
       </p>
       <p>Uploading a CQP Cabrillo file is as easy as 1, 2, 3.  Please complete all three steps to complete
-	your contest entry.</p>
+	your contest entry. If the 3 step process does not work, try this 
+	<a href="logsubmit-nojs.html">one step form</a>.</p>
       <h1>Step 1: Cut-n-paste Cabrillo file</h1>
       <form id="cutnpaste" action="server/upload.fcgi" method="post" accept-charset="UTF-8">
 	<label for="cabcontentId">Paste your log here:</label><br>
@@ -227,6 +230,7 @@ resubmit. Examples of the preferred QSO line syntax are available
 	<label for="AltopclassId" class="inLabel">Entry class:</label>
 	<select name="opclass" id="AltopclassId" class="jForma">
 	  <option value="single">Single-op</option>
+	  <option value="single-assisted">Single-op-assisted</option>
 	  <option value="multi-single">Multi-single</option>
 	  <option value="multi-multi" selected="selected">Multi-multi</option>
 	  <option value="checklog" >Checklog</option>
@@ -292,9 +296,10 @@ resubmit. Examples of the preferred QSO line syntax are available
 
 <div id="AllInOne"> 
   <h1>Upload your CQP Load</h1>
+<p>If this form does not work, try this <a href="logsubmit-nojs.html">form without Javascript</a>.</p>
   <p>
     <strong>
-      Please note that the log submission deadline for CQP 2014, 31 October 23:59 UTC 2014, 
+      Please note that the log submission deadline for CQP 2015, 12 October 23:59 UTC 2015, 
       has past.
     </strong>
     Unless you made prior arrangements with the CQP Chairman, your log is late and by
@@ -320,6 +325,7 @@ resubmit. Examples of the preferred QSO line syntax are available
     <label for="ALLopclassId" class="inLabel">Entry class:</label>
     <select name="opclass" id="ALLopclassId" class="jFormb">
       <option value="single">Single-op</option>
+      <option value="single-assisted">Single-op-assisted</option>
       <option value="multi-single">Multi-single</option>
       <option value="multi-multi" selected="selected">Multi-multi</option>
       <option value="checklog" >Checklog</option>
